// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled-components output for a style block with && 1`] = `
#different-wrapper #different-wrapper .c1#different-wrapper .c0 {
  border: 1px solid fuchsia;
}

<input
  className="c0 c1"
/>
`;

exports[`styled-components output for a style block with a sibling selector 1`] = `
#different-wrapper #different-wrapper .c1 + #different-wrapper .c0 {
  background-color: 'yellow';
}

<div
  className="c0 c1"
/>
`;

exports[`styled-components output for a style block with interpolated selectors 1`] = `
#different-wrapper .c0 {
  position: relative;
}

#different-wrapper .c0 #different-wrapper .c1 {
  -webkit-transform: scale(90%);
  -ms-transform: scale(90%);
  transform: scale(90%);
}

#different-wrapper .c2 + #different-wrapper .c0,
#different-wrapper #different-wrapper .c0 + .sc-bZQynM {
  margin-right: 12px;
}

<div
  className="c0"
/>
`;

exports[`styled-components output for a style block with no selectors 1`] = `
#different-wrapper .c0 {
  background-color: 'yellow';
}

<div
  className="c0"
/>
`;

exports[`styled-components output for two consecutive template expressions 1`] = `
#different-wrapper .c0 {
  background-color: blue;
  font-weight: bold;
}

<div
  className="c0"
/>
`;
